# python-cmake-buildsystem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.rst  conanfile.py
cmake/: ConfigureChecks.cmake  FindCython.cmake  PythonApplyPatches.cmake  SetupNumPyExtension.cmake  SetupOpenCVExtension.cmake
cmake/conan/: ConanWrapper.cmake  SetupCompiler.cmake  SetupConan.cmake
cmake/extensions/: CMakeLists.txt
cmake/extensions/include/openssl/: applink.c
cmake/extensions/numpy/: CMakeLists.txt  _numpyconfig.h.in  config.h.in  longdoubleformat.c
cmake/extensions/numpy/core/: CMakeLists.txt  _multiarray_tests.py  _multiarray_umath.py  _operand_flag_tests.py  _rational_tests.py  _simd.py  _struct_ufunc_tests.py  _umath_tests.py
cmake/extensions/numpy/fft/: CMakeLists.txt  _pocketfft_internal.py
cmake/extensions/numpy/linalg/: CMakeLists.txt  _umath_linalg.py  lapack_lite.py
cmake/extensions/numpy/random/: CMakeLists.txt  _bounded_integers.py  _common.py  _generator.py  _mt19937.py  _pcg64.py  _philox.py  _sfc64.py  bit_generator.py  mtrand.py
cmake/extensions/opencv/: CMakeLists.txt
cmake/libpython/: CMakeLists.txt  frozenmodules.c
patches/3.9/: 0002-ctypes-python-static-support.patch  README.rst
patches/numpy/1.26/: 0001-Prevent-wrong-io.h-found-libpython-static.patch  1001-Break-circular-dependency-in-cythonized-package.patch  1002-Remove-relative-imports-from-cythonized-sources.patch
patches/python/3.9/: 0001-Prevent-missing-include-of-io.h-found-in-msi-.patch
